<resources>
    <string name="app_name">Mutuelle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="app_title">Mutuelle Insurance</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_string">Login </string>
    <string name="signup_string">Signup </string>
    <string name="nationalid_hint">Enter National ID Number</string>
    <string name="card_picture">Mutuelle Card Picture</string>
    <string name="lastname">Enter Last Name</string>
    <string name="firstname">Enter First Name</string>
    <string name="full_name_label">Full Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="national_id">National ID:</string>
    <string name="gender">Gender: </string>
    <string name="previous_plan">Previous Plan:</string>
    <string name="choose_subscription_plan">Choose Subscription Plan</string>
    <string name="nextButton">Next</string>
    <string name="subscription_choice">Subscription Choice:</string>
    <string name="amount">Amount</string>
    <string name="how_would_you_like_to_pay">How would you like to pay?</string>
    <string name="mtn_mobile_money">MTN Mobile Money</string>
    <string name="tigo_cash">Tigo Cash</string>
    <string name="subscribe">Subscribe</string>
    <string name="nearby_activity_label">Nearby Hospitals</string>
    <string name="new_subscription_activity_label">New Subscription</string>
    <string name="subscription_payment">New Subscription | Payment</string>
    <string name="new_subscription">New Subscription</string>
    <string name="payment">Payment</string>
    <string name="nearby_hospital">Nearby Hospital</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="subscription_type">Subscription Type:</string>
    <string name="account_number">Account Number</string>
    <string name="valid_until">Valid Until</string>
    <string name="login_label">Mutuelle Login</string>
    <string name="signup_label">Mutuelle | Signup</string>
    <string name="add_dependent_label">Add Dependent</string>
    <string name="birthday">Birthday</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="genderLabel">Gender</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="name">Name</string>
    <string name="nameLast">Name</string>
    <string name="ok">OK</string>
    <string name="take_photo">Take Photo</string>
    <string name="date_of_birth_yyy_mm_dd">Date of Birth (yyy/mm/dd)</string>
    <string name="payments">Payments</string>
    <string name="reports_overview">Reports</string>
    <string name="checkin">CHECKIN</string>
    <string name="checkin_label">Checkin</string>
    <string name="current_plan">
        Individual Plan
        Valid From: June 2016
        Valid Unit: June 2017
    </string>
    <string name="myPlanActivityLabel">My Plan</string>
    <string name="payments_report">Payments Report</string>
    <string name="myPaymentsActivityLabel">Payments Report</string>
    <string name="google_maps_key" translatable="false">AIzaSyC2XkjYwg-QD6KYshvyfB66a3kwrAEr1BQ</string>
    <string name="hospital_checkin_patient">Hospital | Checkin patient</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_results_hint">Scan results appear here</string>
</resources>
