<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_dependent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cmu.mutuelle.mutuelle.AddDependentActivity">

    <TextView
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/firstNameView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:layout_below="@+id/firstNameView"
        android:layout_alignStart="@+id/lastNameView"
        android:id="@+id/firstNameInput" />

    <TextView
        android:text="@string/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/lastNameView"
        android:layout_below="@+id/firstNameInput"
        android:layout_alignEnd="@+id/firstNameView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nameLast"
        android:ems="10"
        android:layout_below="@+id/lastNameView"
        android:layout_alignEnd="@+id/firstNameInput"
        android:id="@+id/lastNameInput" />

    <TextView
        android:text="@string/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastNameInput"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/dateOfBirthView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_marginStart="33dp"
        android:id="@+id/birthdayInput"
        android:layout_alignBaseline="@+id/dateOfBirthView"
        android:layout_alignBottom="@+id/dateOfBirthView"
        android:layout_toEndOf="@+id/lastNameView"
        tools:text="mm/dd/yyy" />

    <TextView
        android:text="@string/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/genderView"
        android:layout_below="@+id/birthdayInput"
        android:layout_alignEnd="@+id/dateOfBirthView" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:id="@+id/genderRadioGroup"
        android:layout_below="@+id/genderView">

        <RadioButton
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:id="@+id/radioMale" />

        <RadioButton
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioFemale"
            android:layout_below="@+id/genderRadioGroup"
            android:layout_alignStart="@+id/genderView"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            tools:ignore="ObsoleteLayoutParam" />

    </RadioGroup>

    <TextView
        android:text="@string/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genderRadioGroup"
        android:layout_alignStart="@+id/genderView"
        android:layout_marginTop="16dp"
        android:id="@+id/photoLabelView" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_menu_camera"
        android:id="@+id/imageButtonDependentPhoto"
        android:layout_below="@+id/genderRadioGroup"
        android:layout_alignStart="@+id/birthdayInput" />

    <Button
        android:text="@string/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/photoLabelView"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#ffffff"
        android:id="@+id/buttonSubmitAddDependent" />

</RelativeLayout>
