<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cmu.mutuelle.mutuelle.PaymentActivity">

    <TextView
        android:text="@string/subscription_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/subscriptionChoiceLabel"/>

    <TextView
        android:text="@string/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/amountLabel"
        android:layout_below="@+id/subscriptionChoiceLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/how_would_you_like_to_pay"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/amountLabel" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/radioGroupPayment"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp">

        <RadioButton
            android:text="@string/mtn_mobile_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="10dp"
            android:id="@+id/radioMTN"
            android:checked="true" />

        <RadioButton
            android:text="@string/tigo_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioTigoCash"
            android:layout_below="@+id/radioMTN"
            android:layout_alignParentStart="true" />

    </RadioGroup>

    <Button
        android:text="@string/subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subscribeButton"
        android:textColor="#FFFFFF"
        android:background="@android:color/holo_blue_dark"
        android:layout_below="@+id/radioGroupPayment"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

</RelativeLayout>
