<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_check_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.cmu.mutuelle.mutuelle.CheckInActivity">

    <TextView
        android:text="John Doe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/customerName" />

    <TextView
        android:text="@string/subscription_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customerName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/subscriptionType" />

    <TextView
        android:text="@string/account_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subscriptionType"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/accountNumber" />

    <TextView
        android:text="@string/valid_until"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountNumber"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:id="@+id/validUntil" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/validUntil"
        android:background="#dddddd"
        android:id="@+id/view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/QRCodeImage"/>
    </LinearLayout>
</RelativeLayout>
