<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/firstname"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstnameInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/lastname"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateOfBirthInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastnameInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/dateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Ente Date Of Birth"
                android:inputType="date"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/nationalIdInpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateOfBirthInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/nationalId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nationalid_hint"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/selectPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SELECT PLAN"
            android:layout_below="@+id/nationalIdInpt"
            android:layout_marginTop="20dp" />

        <Spinner
            android:id="@+id/selectplanSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectPlan"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectplanSpinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="continue"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</ScrollView>
